syntax = "proto3";

enum PB_ControllerEnum {
    QUADPID = 0;
    ANGULAR_SPEED_TEST = 1;
    LINEAR_SPEED_TEST = 2;
    LINEAR_POSE_DISABLED = 3;
}

message PB_Controller {
    PB_ControllerEnum id = 1;
}
